# flax-recsys

./: .gitignore  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
flax_recsys/: encoder.py  loss_fn.py
flax_recsys/encoder/: __init__.py
flax_recsys/evaluator/: __init__.py  sequential_evaluator.py
flax_recsys/loader/: __init__.py  sequential_loader.py
flax_recsys/model/: DPLRFwFM.py  FM.py  FwFM.py  GRU4Rec.py  two_tower.py
notebook/: DATASET.ipynb
notebook/AMAZON-M2/: 00_GRU4Rec.ipynb
notebook/ML1M/: 00_MF_RATING.ipynb  01_FM_RATING.ipynb  02_TWO_TOWER_RATING.ipynb  03_FwFM_RATING.ipynb  04_DPLRFwFM_RATING.ipynb
