[tool.poetry]
name = "flax-recsys"
version = "1.1.0"
description = ""
authors = ["Kai Sugahara <contact@kais.jp>"]
readme = "README.md"
license="Apache-2.0"

[tool.poetry.dependencies]
python = "^3.11"
flax-trainer = {git = "https://github.com/KaiSugahara/flax-trainer", tag = "v1.1.3"}
pandas = "^2.2.3"
polars = "^1.9.0"
scikit-learn = "^1.5.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
